--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ h2 {
 }
 
 </style>
-
+<body>
 <div id="header">
   <div class="wrapper">
     <h1 id="logo"><a href=".">Word Tree</a></h1>
@@ -337,3 +337,6 @@ h2 {
 
 <script src="../d3.js"></script>
 <script src="../wordtree.js"></script>
+
+</body>
+</html>
