--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@ h2 {
   </div>
 </div>
 
-<script src="../d3.js"></script>
-<script src="../wordtree.js"></script>
+<script src="./d3.js"></script>
+<script src="./wordtree.js"></script>
 
 </body>
 </html>
