--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ h2 {
   <div class="wrapper">
     <h2>Bookmarklet</h2>
     <p style="margin-bottom: 1.5em">Drag this bookmarklet to your Bookmarks Bar and click to instantly turn the current page into a word tree!
-    <p><a href='javascript:location.href="http://www.jasondavies.com/wordtree/?source="+encodeURIComponent(location.href)' style="background: #f60; padding: 10px; border-radius: 8px; color: #fff">Word Tree</a>
+    <p><a href='javascript:location.href="https://fotisz.github.io/WordTree/?source="+encodeURIComponent(location.href)' style="background: #f60; padding: 10px; border-radius: 8px; color: #fff">Word Tree</a>
   </div>
 
   <div class="help-wrapper grey credits">
