--- a/index.html
+++ b/index.html
@@ -319,18 +319,10 @@ h2 {
     </div>
   </div>
 
-  <div class="wrapper">
-    <h2>Bookmarklet</h2>
-    <p style="margin-bottom: 1.5em">Drag this bookmarklet to your Bookmarks Bar and click to instantly turn the current page into a word tree!
-    <p><a href='javascript:location.href="https://fotisz.github.io/WordTree/?source="+encodeURIComponent(location.href)' style="background: #f60; padding: 10px; border-radius: 8px; color: #fff">Word Tree</a>
-  </div>
-
   <div class="help-wrapper grey credits">
     <div class="wrapper">
       <h2>Credits</h2>
-      <p>The <a href="http://hint.fm/projects/wordtree/">Word Tree visualisation technique</a> was invented by the incredible duo Martin Wattenberg and Fernanda Viégas in 2007.  Read <a href="http://hint.fm/papers/wordtree_final2.pdf">their paper</a> for the full details.
-      <p>Be sure to also check out various text analysis projects by <a href="http://moebio.com/">Santiago Ortiz</a>.
-      <p>Created by <a href="http://www.jasondavies.com/">Jason Davies</a>.  Thanks to <a href="http://bost.ocks.org/mike">Mike Bostock</a> for comments and suggestions.
+      <p>The <a href="http://hint.fm/projects/wordtree/">Word Tree visualisation technique</a> was invented by the incredible duo Martin Wattenberg and Fernanda Viégas in 2007.  Read <a href="http://hint.fm/papers/wordtree_final2.pdf">their paper</a> for the full details.</p>
     </div>
   </div>
 </div>
