--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Word Tree</title>
+<title>Word Net</title>
 
 <style>
 button {
@@ -313,9 +313,7 @@ h2 {
     <div class="wrapper">
       <h2>Paste Text</h2>
       <p><textarea id="paste"></textarea>
-      <p><button id="paste-go" class="first last">Generate WordTree!</button>
-      <label for="paste-save"><input type="checkbox" id="paste-save" checked> Shareable</label>
-      <span style="color: #999; font-style: italic">(saves your text on the server)</span>
+      <p><button id="paste-go" class="first last">Generate WordNet!</button>
     </div>
   </div>
 
