--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ h2 {
 <body>
 <div id="header">
   <div class="wrapper">
-    <h1 id="logo"><a href=".">Word Tree</a></h1>
+    <h1 id="logo"><a href=".">Word Net</a></h1>
 
     <form id="form-source">
       <input type="text" id="source" placeholder="">
